# HW_14

./: pyproject.toml
quotes/: db.sqlite3
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py
quotes/quoteapp/static/quoteapp/: style.css
quotes/quoteapp/templates/quoteapp/: author.html  author_about.html  base.html  index.html  quote.html
quotes/quotes/: settings.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: password_reset_complete.html  password_reset_email.html  signup.html
